samples/_failures_safe/1761220739_108109_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8eaaf880.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_8eaaf880.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
